@@ -4,7 +4,8 @@
 	as it doesn't exist in the Tcl plugin.
 	Show Attach info in tab text, maintain namespace attachment
 	between console switches.
-	
+	(::tkcon::InterpEval, Interps): beware safe interps with Tk
+
 2004-02-05  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl: brought code back to 8.0 compatability.
